test/bad/nullables/nullable03.px

func f(s: String): Void def
    return

s: String? = ""
f(s)
